# simple-assets

./: README.md  __init__.py  assets.db  main.py  models.py  pyproject.toml  type_assets_populate.py  utils.py
jinja2_template/: painting.jinja2
migrations/: env.py
migrations/versions/: f4b889a13079_init_tables.py
populate/: painting_La_Gioconda.json
