
[project]
name = "simple_assets"
version = "0.1.0"
description = "Simple Asset CRUD with yaml templates por particular data for asset type using fastapi, sqlmodel, alembic and async connections"
authors = [
    {name = "Gabriel Martin del Campo", email = "gmartindelcye@gmail.com"},
]
dependencies = [
    "fastapi>=0.96.0",
    "uvicorn>=0.22.0",
    "sqlmodel>=0.0.8",
    "python-dotenv>=1.0.0",
    "alembic>=1.11.1",
    "aiosqlite>=0.19.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
    "flake8>=6.0.0",
]

[tools.pdm.scripts]
run = "uvicorn main:app -p 8080 --reload